# weird_valley

./: .gitignore  Cargo.toml  LICENCE  README.md
.cargo/: config.toml
crates/animation_plugin/: Cargo.toml
crates/animation_plugin/src/: lib.rs
crates/ecs_common/: Cargo.toml
crates/ecs_common/src/: components.rs  generic_system.rs  lib.rs  prelude.rs  trait_impl.rs
crates/fruvibe_ui/: Cargo.toml
crates/fruvibe_ui/src/: color.rs  lib.rs  node_builder.rs
crates/game_resources/: Cargo.toml
crates/game_resources/src/: lib.rs  ressource.rs
crates/interact_plugin/: Cargo.toml
crates/interact_plugin/src/: components.rs  lib.rs  systems.rs
crates/inventory_ui/: Cargo.toml
crates/inventory_ui/src/: components.rs  lib.rs  systems.rs
crates/iweird/: Cargo.toml
crates/iweird/src/: components.rs
crates/velox2d/: Cargo.toml
crates/velox2d/src/: components.rs  lib.rs  prelude.rs
crates/velox2d/src/systems/: mod.rs
crates/zestalive/: Cargo.toml
crates/zestalive/src/: components.rs  lib.rs
src/: main.rs  prelude.rs
src/common/: mod.rs
src/plugins/: mod.rs
src/plugins/game/: mod.rs
src/plugins/interaction/: mod.rs
src/plugins/player/: components.rs  mod.rs
src/plugins/player/systems/: inventory.rs  mod.rs
