[package]
name = "weird_valley"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy_dylib = { workspace = true }
game_resources = { workspace = true }
zestalive = { workspace = true }
animation_plugin = { workspace = true }
ecs_common = { workspace = true }
velox2d = { workspace = true }


[workspace.dependencies]
bevy = { version = "*", default-features = false, features = [
    "multi_threaded",
    "bevy_image",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "custom_cursor",
    "bevy_winit",
    "bevy_ui_picking_backend",
    "bevy_ui",
    "bevy_window",
    "bevy_text",
    "bevy_state",
    "bevy_picking",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_color",
    "bevy_asset",
    "default_font",
    "wayland",
    "dynamic_linking",
    "png",
] }
bevy_dylib = "*"
game_resources = { path = "crates/game_resources" }
zestalive = { path = "crates/zestalive" }
ecs_common = { path = "crates/ecs_common" }
iweird = { path = "crates/iweird" }
animation_plugin = { path = "crates/animation_plugin" }
velox2d = { path = "crates/velox2d" }

[workspace]
resolver = "2"
members = [
    "crates/ecs_common",
    "crates/game_resources",
    "crates/zestalive",
    "crates/iweird",
    "crates/animation_plugin",
    "crates/velox2d",
]

[profile.dev.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false
